tests/org.eclipse.php.core.tests/workspace/errors/php7/invalidConstantExpression1.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
$x = 1;
const TEST = [2,$x];
?>
--EXPECT--
[line=3, start=30, end=32] Constant expression contains invalid operations